# UA_Ingenieria_Informatica

./: README.md
ADA/Práctica 1/: bubbleSort.cc  makefile  quickSort  quickSort.CPUtimes  quickSort.cc  quickSort.gnuplot
ADA/Práctica 5/: makefile  pow  pow2  pow2.cc  pow2.gnuplot  pow2.steps
ADA/Práctica 6/: makefile  potter  potter.cc  potter_n01.def  potter_n01.sol  potter_n03.def  potter_n03.sol  potter_n10.def  potter_n10.sol  potter_n15.def  potter_n15.sol  potter_n20.def  potter_n20.sol  potter_n30.def  potter_n30.sol  potter_n501.def
ADA/Práctica 7/: makefile  potter_greddy  potter_greddy.cc  potter_n01r.def  potter_n04r.def  potter_n04r.sol  potter_n1001r.def  potter_n1001r.sol  potter_n101r.def  potter_n101r.sol  potter_n201r.def  potter_n201r.sol  potter_n3001r.def  potter_n3001r.sol  potter_n301r.def  potter_n301r.sol  potter_n30r.def  potter_n30r.sol  potter_n401r.def  potter_n401r.sol  potter_n40r.def  potter_n40r.sol  potter_n501r.def  potter_n501r.sol  potter_n50r.def  potter_n50r.sol  potter_n60r.def  potter_n60r.sol  potter_n70r.def  potter_n70r.sol
ADA/Práctica 8/: makefile  potter_bt  potter_bt.cc  potter_n30.sol-bt  potter_n40.def  potter_n40.sol-bt  potter_n60.def  potter_n70.def  potter_n90.def  potter_n90.sol-bt
ADA/Práctica 8 MAX/: README.md  makefile  potter_bt.cc
ADA/Práctica 9 /: makefile  mem2.def  (+18 more)
IC/Prácticas/Práctica 3/Grupo/fuentes/: CMakeLists.txt  crossValidation.cc  crossValidation.h  get_dataset.sh  knn.cc  knn.h  main.cc  sample.cc
MD/: MaGraDa.lnk  leeme.txt
PPSS/: .gitignore
REDES/: README.md
SE/: .gitignore
(+4316 files in other folders)
